--- a/app/class_teacher/templates/pages/add-student/student_list_class.html
+++ b/app/class_teacher/templates/pages/add-student/student_list_class.html
@@ -183,7 +183,7 @@
                     "render": function (data, type, full, meta) {
                         return '<div class="dropdown">' +
                             '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
-                            '<i class="fas fa-ellipsis-v"><b>Click</b></i>' +
+                            '<b>Click</b>' +
                             '</a>' +
                             '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
                             '<a class="dropdown-item" href="/view-std-detail/' + full.id + '">View</a>' +
