--- a/app/subject_teacher/templates/pages/view-student-table/view-std.html
+++ b/app/subject_teacher/templates/pages/view-student-table/view-std.html
@@ -68,7 +68,7 @@
                                                         <a class="btn btn-sm btn-icon-only text-light" href="#"
                                                             role="button" data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
+                                                            
                                                         </a>
                                                         <div
                                                             class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
@@ -133,7 +133,7 @@
                 "render": function (data, type, full, meta) {
                     return '<div class="dropdown">' +
                         '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
-                        '<i class="fas fa-ellipsis-v"><b>Click</b></i>' +
+                        '<b>Click</b>' +
                         '</a>' +
                         '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
                         '<a class="dropdown-item" href="/std-detials/' + full.id + '">View</a>' +
@@ -190,7 +190,7 @@ Table.rows.add(result).draw();
                         "render": function (data, type, full, meta) {
                             return '<div class="dropdown">' +
                                 '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
-                                '<i class="fas fa-ellipsis-v"><b>Click</b></i>' +
+                                '<b>Click</b>' +
                                 '</a>' +
                                 '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
                                 '<a class="dropdown-item" href="/view-std-info/' + full.id + '">View</a>' +
