--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -48,13 +48,13 @@
                             
                             <!-- student's detail -->
                             <div class="student">
-                                <div class="container mt-3">
+                                <div class="container">
                                     <div class="row d-flex justify-content-center"> 
-                                        <div class="col-md-5"> 
+                                        <div class="col-md-4"> 
                                             <div class="card p-2 py-5">     
                                                 <div class="text-center">
                                                     <a href="{{ std.half_photo }}" class="image-popup" title="Passport Size Photo">
-                                                        <img src="{{ std.half_photo }}" width="150px" height="140px" class="rounded-circle">
+                                                        <img src="{{ std.half_photo }}" width="140px" height="140px" class="rounded-circle">
                                                     </a>
                                                 </div> 
                                             </div> 
