--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -340,7 +340,7 @@
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                        <h5 class="modal-title" id="exampleModalLabel">Marksheet</h5>
                                                         <button type="button" class="close" data-dismiss="modal"
                                                             aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
@@ -359,8 +359,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary"
-                                                            data-dismiss="modal">Close</button>
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -398,8 +397,7 @@
                                                 </div>
                                             </div>
                                             <div class="form-group row">
-                                                <label for="PhoneNumber" class="control-label col-sm-4 text-right">Phone
-                                                    Number :</label>
+                                                <label for="PhoneNumber" class="control-label col-sm-4 text-right">Phone Number :</label>
                                                 <div class="col-sm-8">
                                                     <input type="text" value="{{std.parent_contact_number}}"
                                                         class="form-control" name="par_number" id="par_number" disabled>
