--- a/app/admin/templates/partials/_sidebar.html
+++ b/app/admin/templates/partials/_sidebar.html
@@ -35,12 +35,12 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
         <i class="icon-bar-graph menu-icon"></i>
-        <span class="menu-title">Contact Us</span>
+        <span class="menu-title">User Inquiries</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="charts">
-        <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.usrfeedback')}}">User inquiry</a></li>
+        <ul class="nav flex-column sub-menu" style="background: white;">
+          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.usrfeedback')}}" style="color: #5c5656;">User Inquiry</a></li>
         </ul>
       </div>
     </li>
