--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -340,7 +340,7 @@
                                             <div class="modal-dialog" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                                        <h5 class="modal-title" id="exampleModalLabel">Student Marksheet</h5>
                                                         <button type="button" class="close" data-dismiss="modal"
                                                             aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
@@ -442,10 +442,11 @@
                                             </div>
                                         </div>
                                     </div> <br><br>
+                                    <hr class="hr mt-0">
                                     <div class="row text-center">
                                         <div class="col-md-12">
                                             <button type="button" id="update"
-                                                class="btn btn-md btn-primary">Submit</button>
+                                                class="btn btn-md btn-warning text-light">Submit</button>
                                         </div>
                                     </div>
                                 </div>
