--- a/app/class_teacher/templates/pages/add-student/add_student_class.html
+++ b/app/class_teacher/templates/pages/add-student/add_student_class.html
@@ -43,7 +43,7 @@
                                 <div class="col-md-4 mt-2">
                                     <br>
 
-                                    <button type="submit" class="btn btn-success" style="font-size:15px">
+                                    <button type="submit" class="btn btn-warning text-light" style="font-size:15px;">
                                         Search
                                     </button> <br>
                                 </div>
