--- a/app/class_teacher/templates/pages/add-student/view_std_mark.html
+++ b/app/class_teacher/templates/pages/add-student/view_std_mark.html
@@ -30,7 +30,7 @@
                                 <li class="nav-item">
                                     <hr class="horizontal2"/>
                                     <a class="nav-link active btn btn-primary" data-toggle="pill"
-                                        href="#studentDetai2">Student Detail</a>
+                                        href="#studentDetail">Student Detail</a>
                                 </li>
                                 <li class="nav-item">
                                     <hr class="horizontal2"/>
