--- a/app/admin/templates/pages/user-feedback/feedback.html
+++ b/app/admin/templates/pages/user-feedback/feedback.html
@@ -20,7 +20,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                       <div class="card-body">
                           <div class="row">
                               <div class="table-responsive">
-                                <table class="table align-items-center table-flush" id="customerList">
+                                <table class="table align-items-center table-flush" id="customerList" style="width: 100%;">
                                     <thead class="thead-light">
                                         <tr>
                                             <th scope="col" class="col-1" data-sort="name">SL</th>
