--- a/app/home/templates/layouts/enroll_main.html
+++ b/app/home/templates/layouts/enroll_main.html
@@ -28,48 +28,176 @@
 	<link href="../static/vendor/formValidation/formValidation.min.css" type="text/css" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style>
+		#loader {
+			position: relative;
+			width: 2.5em;
+			height: 2.5em;
+			transform: rotate(165deg);
+		}
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
+		#loader:before,
+		#loader:after {
+			content: '';
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			display: block;
+			width: 0.5em;
+			height: 0.5em;
+			border-radius: 0.25em;
+			transform: translate(-50%, -50%);
+		}
+
+		#loader:before {
+			animation: before 2s infinite;
+		}
+
+		#loader:after {
+			animation: after 2s infinite;
+		}
+
+		@keyframes before {
+			0% {
+				width: 0.5em;
+				box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
+			}
+
+			35% {
+				width: 2.5em;
+				box-shadow: 0 -0.5em rgba(225, 20, 98, 0.75), 0 0.5em rgba(111, 202, 220, 0.75);
+			}
+
+			70% {
+				width: 0.5em;
+				box-shadow: -1em -0.5em rgba(225, 20, 98, 0.75), 1em 0.5em rgba(111, 202, 220, 0.75);
+			}
+
+			100% {
+				box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
+			}
+		}
+
+		@keyframes after {
+			0% {
+				height: 0.5em;
+				box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
+			}
+
+			35% {
+				height: 2.5em;
+				box-shadow: 0.5em 0 rgba(61, 184, 143, 0.75), -0.5em 0 rgba(233, 169, 32, 0.75);
+			}
+
+			70% {
+				height: 0.5em;
+				box-shadow: 0.5em -1em rgba(61, 184, 143, 0.75), -0.5em 1em rgba(233, 169, 32, 0.75);
+			}
+
+			100% {
+				box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
+			}
+		}
+
+		/** * Attempt to center the whole thing! */
+		html,
+		body {
+			height: 100%;
+		}
+
+		#loader {
+			position: absolute;
+			top: calc(50% - 1.25em);
+			left: calc(50% - 1.25em);
+		}
+
+		/* Add animation to "page content" */
+		.animate-bottom {
+			position: relative;
+			-webkit-animation-name: animatebottom;
+			-webkit-animation-duration: 1s;
+			animation-name: animatebottom;
+			animation-duration: 1s
+		}
+
+		@-webkit-keyframes animatebottom {
+			from {
+				bottom: -100px;
+				opacity: 0
+			}
+
+			to {
+				bottom: 0px;
+				opacity: 1
+			}
+		}
+
+		@keyframes animatebottom {
+			from {
+				bottom: -100px;
+				opacity: 0
+			}
+
+			to {
+				bottom: 0;
+				opacity: 1
+			}
+		}
+
+		#myDiv {
+			display: none;
+
+		}
+	</style>
 </head>
 
-<body>
-	<!-- Topbar Start -->
+<body onload="myFunction()">
+	<div id="loader"></div>
+	<div style="display:none;" id="myDiv" class="animate-bottom">
+		<!-- Topbar Start -->
 
-	{% block content %}
-	{% endblock content %}
+		{% block content %}
+		{% endblock content %}
 
-	{% include "partials/_footerhome.html" %}
-
-
-
-	<!-- Specific JS goes HERE -->
-	{% block javascripts %}{% endblock javascripts %}
-	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-		crossorigin="anonymous"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="../static/js/headroom.min.js"></script>
-	<script src="../static/js/jQuery.headroom.min.js"></script>
-	<script src="../static/js/template.js"></script>
-	<script src="../static/vendor/dropify/dropify.min.js"></script>
-
-	<script src="../static/vendor/formValidation/es6-shim.min.js"></script>
-	<script src="../static/vendor/formValidation/formValidation.min.js"></script>
-	<script src="../static/vendor/formValidation/Bootstrap.min.js"></script>
-	<script src="../static/vendor/formValidation/Tachyons.min.js"></script>
-	<script src="../static/js/enroll_student_validation.js"></script>
-
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	
+		{% include "partials/_footerhome.html" %}
+	</div>
 
 </body>
+<!-- Specific JS goes HERE -->
+{% block javascripts %}{% endblock javascripts %}
+<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="../static/js/headroom.min.js"></script>
+<script src="../static/js/jQuery.headroom.min.js"></script>
+<script src="../static/js/template.js"></script>
+<script src="../static/vendor/dropify/dropify.min.js"></script>
+
+<script src="../static/vendor/formValidation/es6-shim.min.js"></script>
+<script src="../static/vendor/formValidation/formValidation.min.js"></script>
+<script src="../static/vendor/formValidation/Bootstrap.min.js"></script>
+<script src="../static/vendor/formValidation/Tachyons.min.js"></script>
+<script src="../static/js/enroll_student_validation.js"></script>
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+<script>
+	var myVar;
+	function myFunction() {
+		myVar = setTimeout(showPage, 3000);
+	}
+
+	function showPage() {
+		document.getElementById("loader").style.display = "none";
+		document.getElementById("myDiv").style.display = "block";
+	}
+
+
+</script>
 
 </html>
