--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -5,9 +5,11 @@
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 {% endblock stylesheets %}
 
 {% block content %}
+
 <!-- container -->
 <div class="container">
 
@@ -15,7 +17,7 @@
 		<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home"> Home</i></a></li>
 		<li class="active">Login as admin </li>
 	</ol>
-	
+
 	<div class="row">
 
 		<!-- Article main content -->
@@ -28,7 +30,8 @@
 							Admin Login
 
 						</h1>
-						<p style="text-align: center; margin-top: 10px;">Please enter your credentials to login to the
+						<p style="text-align: center; margin-top: 10px;">Please enter your credentials to login to
+							the
 							system</p>
 						<hr>
 						<div class="well">
@@ -41,13 +44,15 @@
 								{{ form.hidden_tag() }}
 								<div class="row">
 									<div class="col-md-12">
-										{{ form.username(placeholder="Username", class="form-control form-control") }}
+										{{ form.username(placeholder="Username", class="form-control form-control")
+										}}
 									</div>
 								</div>
 								<br>
 								<div class="row">
 									<div class="col-md-12">
-										{{ form.password(placeholder="Password", class="form-control form-control-sm")
+										{{ form.password(placeholder="Password", class="form-control
+										form-control-sm")
 										}}
 									</div>
 								</div>
@@ -72,6 +77,7 @@
 </div> <!-- /container -->
 
 
+
 <!-- /social links -->
 {% endblock content %}
 
@@ -83,6 +89,7 @@
 	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 	crossorigin="anonymous"></script>
 <script>
+
 	$("#login-form").on("submit", function (e) {
 		e.preventDefault(e);
 		var form_data = new FormData($('#login-form')[0])
@@ -93,11 +100,12 @@
 			contentType: false,
 			cache: false,
 			processData: false,
+			
 			success: function (res) {
 				if (res.output.fa_required == "invalid") {
 					$("#invalid").show();
 					$("#invalid").html(res.output.message);
-					
+
 				} else {
 					window.location = "/dashboard";
 				}
@@ -106,5 +114,6 @@
 
 		});
 	});
+
 </script>
 {% endblock javascripts %}
